--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,23 @@
 <html>
+  <style>
+    h1{
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      color:  aquamarine;
+      text-decoration: overline underline dotted;
+      text-decoration-color: burlywood;
+      text-align: center;
+      position: -webkit-sticky;
+    }
+  </style>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>BetterTabs</h1>
+    <button>Sort Tabs</button>
+    <button>AutoSort (Off)</button>
+    <button>Transfer</button>
+    <button>Import</button>
+    <button>Github/Docs</button>
+    <button style="background-color: darkgray;" >API</button>
+    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script><dotlottie-wc src="https://lottie.host/44df359f-7439-464f-9535-5e70c7829c63/xrVc2970OY.lottie" autoplay loop></dotlottie-wc>
     <script src="popup.js"></script>
   </body>
 </html>
