--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </style>
   <body>
     <h1>BetterTabs</h1>
-    <button>Sort Tabs</button>
+    <button onClick="sortTabsFunction()">Sort Tabs</button>
     <button>AutoSort (Off)</button>
     <button>Transfer</button>
     <button>Import</button>
     <button>Github/Docs</button>
     <button style="background-color: darkgray;" >API</button>
     <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script><dotlottie-wc src="https://lottie.host/44df359f-7439-464f-9535-5e70c7829c63/xrVc2970OY.lottie" autoplay loop></dotlottie-wc>
-    <script src="popup.js"></script>
+    <script src="sort.js"></script>
   </body>
 </html>
