--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </style>
   <body>
     <h1>BetterTabs</h1>
-    <button onClick="sortTabsFunction()">Sort Tabs</button>
-    <button>AutoSort (Off)</button>
-    <button>Transfer</button>
-    <button>Import</button>
-    <button>Github/Docs</button>
-    <button style="background-color: darkgray;" >API</button>
-    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script><dotlottie-wc src="https://lottie.host/44df359f-7439-464f-9535-5e70c7829c63/xrVc2970OY.lottie" autoplay loop></dotlottie-wc>
-    <script src="sort.js"></script>
+    <button id="findOldest">Find Old Tabs</button>
+    <button id="autoSortButton">SortTabs</button>
+    <button id="transferButton">Transfer</button>
+    <button id="importButton">Import</button>
+    <button id="githubDocsButton">Github/Docs</button>
+    <button id="apiButton" style="background-color: darkgray;">API</button>
+    <script src="findold.js"></script>
+    <script src="events.js"></script>
   </body>
 </html>
